removed @apply add prose styles to Wrapper component

--- a/src/components/forms/Submit.astro
+++ b/src/components/forms/Submit.astro
@@ -30,7 +30,7 @@ import Button from "@/components/fundations/components/Button.astro";
 
 <section>
   <Wrapper variant="narrow">
-    <div class="prose-styles">
+    <Wrapper variant="prose">
       <h4>Get your web tools featured</h4>
       <p>
         Submit your web tools for free and get them noticed by top designers.
@@ -87,6 +87,6 @@ import Button from "@/components/fundations/components/Button.astro";
 
       <h4>If not selected</h4>
       <p>Don’t give up—refine your tool and try again with future projects.</p>
-    </div>
+    </Wrapper>
   </Wrapper>
 </section>
