--- a/src/components/fundations/containers/Wrapper.astro
+++ b/src/components/fundations/containers/Wrapper.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-  variant?: "hero" | "heroNarrow" | "narrow" | "standard"; // Optional prop for the variant
+  variant?: "hero" | "heroNarrow" | "narrow" | "standard" | "prose"; // Optional prop for the variant
   class?: string; // Optional prop for additional classes
 }
 const { variant = "standard", class: extraClass = "" } = Astro.props;
@@ -13,7 +13,10 @@ const variantClasses = {
   // Wrappers for standard sections
   standard:
     "mx-auto px-4 lg:px-8 max-w-screen 2xl:max-w-[120rem] 2xl:lg:px-24   ",
+    // Wrapper for narrow sections
   narrow: "mx-auto px-4 lg:px-8 max-w-xl",
+  // Wrappers for prose sections
+  prose: "prose text-base-500    prose-headings:text-base-900 prose-pre:border-0  prose-blockquote:text-accent-400    prose-a:text-accent-400 hover:prose-a:text-accent-500 prose-a:duration-200  max-w-none prose-pre:text-sm",
 };
 // Combine the classes for the specified variant with any extra classes
 const classes = `${variantClasses[variant]} ${extraClass}`.trim();
