--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -92,7 +92,7 @@ const allPosts = allPostsUnsorted.sort(
   </section>
   <section>
     <Wrapper variant="narrow">
-      <div class="prose-styles"><slot /></div>
+      <Wrapper variant="prose"><slot /></Wrapper>
     </Wrapper>
   </section>
   <SubscribeCta />
