--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -7,6 +7,7 @@ import Text from "@/components/fundations/elements/Text.astro";
 import Link from "../fundations/components/Link.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 // Components
+import ToolSearch from "@/components/tools/ToolSearch.astro";
 // Quick access links
 const links = [
   { href: "/tools/home", text: "Tools" },
@@ -68,7 +69,7 @@ const isIndexPage = Astro.url.pathname === "/";
 <section>
   <Wrapper variant="standard">
     <div
-      class="grid grid-cols-2 md:grid-cols-3 items-center w-full gap-3 pt-2 lg:pt-8"
+      class="grid grid-cols-2 md:grid-cols-2 items-center w-full gap-3 pt-2 lg:pt-8"
     >
       <div class="flex items-center gap-2 lg:gap-4">
         <!-- Small not sowing on Index page, it already has a big logo -->
@@ -97,31 +98,7 @@ const isIndexPage = Astro.url.pathname === "/";
           ))
         }
       </div>
-      <div class="hidden md:block mx-auto justify-center w-full">
-        <div class="relative">
-          <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-            <svg
-              class="text-base-400 size-5"
-              viewBox="0 0 24 24"
-              fill="none"
-              aria-hidden="true"
-            >
-              <path
-                d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"></path>
-            </svg>
-          </span>
-          <input
-            type="text"
-            class="w-full py-2 pl-10 pr-4 block h-9 px-4 text-sm text-base-700 duration-300 bg-base-100 border border-transparent rounded-full appearance-none ring1 ring-base-200 placeholder-base-400 focus:border-base-300 focus:bg-transparent focus:outline-none focus:ring-base-500 focus:ring-offset-2 focus:ring-2 sm:text-sm"
-            placeholder="Search"
-            aria-label="Search"
-          />
-        </div>
-      </div>
+
       <button
         type="button"
         class="size-9 inline-flex items-center justify-center group ml-auto"
