--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,13 +1,11 @@
 ---
-
-// Import global styles
+// Fundations
 import "@/styles/global.css";
+import BaseHead from "@/components/fundations/head/BaseHead.astro";
 // Components
-import BaseHead from "@/components/BaseHead.astro";
 import Footer from "@/components/global/Footer.astro";
 import Navigation from "@/components/navigation/Navigation.astro";
 ---
-
 <html
   lang="en"
   class="scroll-smooth selection:bg-accent-50 selection:text-accent-500"
@@ -24,8 +22,6 @@ import Navigation from "@/components/navigation/Navigation.astro";
     <main class="grow ">
       <slot />
     </main>
-    
     <Footer />
-    
   </body>
 </html>
