--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -74,7 +74,7 @@ const socialLinks = [
         variant="textSM"
         x-data="{ year: new Date().getFullYear() }"
         class="mt-4">
-        © <span x-text="year"></span> Lexington Themes
+        © <span x-text="year"></span> yrx.io
       </Text>
     </div>
     <!-- Right Column -->
