--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -17,7 +17,7 @@ import ToolSearch from "../tools/ToolSearch.astro";
       <Yrx />
     </div>
     <Text tag="p" variant="textLG" class="mt-4 text-base-700 text-balance">
-      Your last spot to find new tools every day
+      Grow faster with Reddit and yrx.
     </Text>
     <div class="mt-8 flex flex-wrap gap-4">
       <div x-data="{ open: false }">
