--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,14 +14,14 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         variant="displaySM"
         class="text-base-900 font-medium 2xl:text-5xl tracking-tight"
       >
-        Who we are
+        Reddit Marketing
       </Text>
       <Text
         tag="p"
         variant="textBase"
-        class="mt-4 text-base-500 text-balance 2xl:text-xl"
+        class="mt-4 text-base-700 text-balance 3xl:text-3xl"
       >
-        Get to know us
+        Get to know yrx
       </Text>
     </Wrapper>
   </section>
@@ -29,32 +29,23 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
     <Wrapper variant="narrow" class="py-6">
       <div class="flex flex-col gap-4 text-base-500">
         <Text tag="p" variant="textBase">
-          Trendspotter is a vibrant, community-driven platform designed to bring
-          together creatives from all walks of life. Whether you're a designer
-          looking to refine your craft, a developer exploring the latest in
-          front-end tools, or a creative professional seeking fresh inspiration,
-          Trendspotter is the go-to hub for staying ahead of the curve. By
-          providing access to the latest trends in design, typography, and
-          graphics tools, we aim to empower our users with cutting-edge
-          resources and innovative ideas.
+          White hat. Black hat. Both meaningless terms. We play to win. 
         </Text>
         <Text tag="p" variant="textBase">
-          More than just a resource center, Trendspotter fosters a collaborative
-          environment where users can exchange insights, share experiences, and
-          showcase their own work. Our curated collections and regularly updated
-          content ensure that members always have access to the freshest ideas
-          and techniques in the creative world. From tutorials and in-depth
-          articles to trend analyses and tool reviews, our platform offers
-          something for everyone looking to elevate their work and streamline
-          their workflow.
+          If you are not familiar with Reddit, please become so immediately. Since
+          Google became involved, just about every search query routes back to a discussion on the platform. 
         </Text>
         <Text tag="p" variant="textBase">
-          At Trendspotter, we believe that creativity thrives in a connected
-          community. That’s why we continuously strive to create a space where
-          inspiration meets innovation, enabling our members to push boundaries
-          and explore new horizons. Join us today to become part of a dynamic
-          network of forward-thinking individuals passionate about shaping the
-          future of design and creativity.
+          We have driven 10,000 new user signups in one week for a single client (SaaS). 
+        </Text>
+        <Text tag="p" variant="textBase">
+          We took a chrome extension from 500 installs to 20,000 in a month. 
+        </Text>
+        <Text tag="p" variant="textBase">
+          We go viral. We stay consistent. We draw attention to your offer. 
+        </Text>
+        <Text tag="p" variant="textBase">
+          Click "Work with us" to schedule a call and see if we are a good fit. 
         </Text>
 
 
