--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -54,10 +54,6 @@ const system = [
         href: "https://x.com/YRXmarketing",
         text: "Twitter/X",
       },
-      {
-        href: "/system/links",
-        text: "Links",
-      },
     ],
   },
 ];
@@ -245,7 +241,7 @@ const system = [
           rel="noopener noreferrer"
           class="w-full flex justify-center items-center px-4 py-2 rounded-3xl bg-accent-500 text-white font-semibold hover:bg-accent-600 transition-colors duration-200 cursor-pointer"
         >
-          Grow your business faster
+          Grow faster with yrx.io
         </a>
       </div>
     </div>
