--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,23 +5,21 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import Text from "@/components/fundations/elements/Text.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 // Components
-import Insights from "@/components/blog/Insights.astro";
 import SubscribeCta from "@/components/blog/SubscribeCta.astro";
-import EntriesOne from "@/components/blog/EntriesOne.astro";
 import Hero from "@/components/landing/Hero.astro";
-import SmallCards from "@/components/directory/SmallCards.astro";
 import BigCard from "@/components/directory/BigCard.astro";
+import SmallCards from "@/components/directory/SmallCards.astro";
+import SponsorCard from "@/components/directory/SponsorCard.astro";
 import { getCollection } from "astro:content";
 const allentries = await getCollection("directory");
-const allPosts = await getCollection("posts");
 ---
 
 <BaseLayout>
   <Hero />
   <section class="border-y border-base-200">
-    <Wrapper variant="standard">
+    <Wrapper variant="standard" class="py-6 lg:py-12">
       <div
-        class="flex flex-col gap-4 lg:flex-row lg:justify-between border-t border-base-200 pt-2"
+        class="flex flex-col gap-4 lg:flex-row lg:justify-between"
       >
         <Text
           tag="h2"
@@ -36,7 +34,7 @@ const allPosts = await getCollection("posts");
         >
           See all resources
           <svg
-            xmlns="http://www.w3.org/2000/svg"
+            xmlns="http://www.w.org/2000/svg"
             width="24"
             height="24"
             viewBox="0 0 24 24"
@@ -52,58 +50,27 @@ const allPosts = await getCollection("posts");
           >
         </Text>
       </div>
-      <div class="grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-3 mt-4">
-        {allentries.slice(3, 6).map((post) => <BigCard post={post} />)}
-      </div>
-    </Wrapper>
-  </section>
-  <Insights post={allPosts[0]} />
-  <section class="border-b border-base-200">
-    <Wrapper variant="standard">
       <div class="grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-4 mt-4">
-        {allentries.slice(8, 12).map((post) => <SmallCards post={post} />)}
+        {allentries.slice(0, 3).map((post) => <BigCard post={post} />)}
+        <SponsorCard />
       </div>
     </Wrapper>
   </section>
-  <section>
+  <section class="border-b border-base-200">
     <Wrapper variant="standard" class="py-6 lg:py-12">
       <div
-        class="flex flex-col gap-4 lg:flex-row lg:justify-between border-t border-base-200 pt-2"
+        class="flex flex-col gap-4 lg:flex-row lg:justify-between"
       >
         <Text
           tag="h2"
           variant="textXS"
-          class="font-medium uppercase text-base-500">The resources</Text
+          class="font-medium uppercase text-base-500">Latest additions</Text
         >
-        <Text
-          tag="a"
-          href="/directory/home"
-          aria-label="Your label"
-          class="text-base-500 text-xs uppercase hover:text-accent-500 flex items-center gap-1 transition-all duration-200"
-        >
-          See all resources
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-narrow-right"
-            ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-              d="M5 12l14 0"></path><path d="M15 16l4 -4"></path><path
-              d="M15 8l4 4"></path></svg
-          >
-        </Text>
       </div>
-      <div class="grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-4 mt-4">
-        {allentries.slice(8, 12).map((post) => <BigCard post={post} />)}
+      <div class="grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-4 mt-8">
+        {allentries.slice(3, 7).map((post) => <SmallCards post={post} />)}
       </div>
     </Wrapper>
   </section>
-  <EntriesOne post={allPosts[1]} />
   <SubscribeCta />
 </BaseLayout>
