--- a/src/components/fundations/head/Seo.astro
+++ b/src/components/fundations/head/Seo.astro
@@ -3,13 +3,13 @@ import { AstroSeo } from "@astrolib/seo";
 ---
 
 <AstroSeo
-  title="Your Page Title"
-  description="A detailed description of your page content."
-  canonical="https://yoursite.com/current-page"
+  title="yrx.io - Viral Reddit Marketing"
+  description="We are a team of Reddit experts who help you grow your business faster."
+  canonical="https://yrx.io"
   openGraph={{
-    url: "https://yoursite.com/current-page",
-    title: "Your Page Title",
-    description: "A detailed description of your page content.",
+    url: "https://yrx.io",
+    title: "yrx.io - Viral Reddit Marketing",
+    description: "We are a team of Reddit experts who help you grow your business faster.",
     images: [
       {
         url: "https://yoursite.com/og-image.jpg",
