--- a/src/components/fundations/head/Favicons.astro
+++ b/src/components/fundations/head/Favicons.astro
@@ -1,16 +1,15 @@
 <!-- Favicons -->
-<link rel="icon" href="/favicon.ico" sizes="any" />
-<link rel="icon" href="/icon.svg" type="image/svg+xml" />
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<link rel="icon" href="/yrx-favicon.png" type="image/png" sizes="any" />
+<link rel="apple-touch-icon" href="/yrx-favicon.png" />
 <link rel="manifest" href="/manifest.webmanifest" />
 
 <!-- Favicon for IE -->
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="/yrx-favicon.png" type="image/png" />
 
 <!-- Favicons for different sizes -->
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/yrx-favicon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/yrx-favicon.png" />
+<link rel="icon" type="image/png" sizes="48x48" href="/yrx-favicon.png" />
 
 <!-- Apple Touch Icon (for backwards compatibility) -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/yrx-favicon.png" />
