--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const allentries = await getCollection("directory");
         <Text
           tag="h2"
           variant="textXS"
-          class="font-medium uppercase text-base-500">Featured resources</Text
+          class="font-medium uppercase text-base-500">Featured marketing examples</Text
         >
         <Text
           tag="a"
@@ -32,7 +32,7 @@ const allentries = await getCollection("directory");
           aria-label="Your label"
           class="text-base-500 text-xs uppercase hover:text-accent-500 flex items-center gap-1 transition-all duration-200"
         >
-          See all resources
+          See all examples
           <svg
             xmlns="http://www.w.org/2000/svg"
             width="24"
