--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -6,16 +6,22 @@ import Logo from "@/images/logoWhite.svg";
 import Text from "../fundations/elements/Text.astro";
 import Wrapper from "../fundations/containers/Wrapper.astro";
 const legalLinks = [
+{ href: "/pricing", text: "Pricing" },
   { href: "/infopages/terms", text: "Terms & policies" },
   { href: "/infopages/", text: "Privacy policy" },
 ];
 const socialLinks = [
-  { text: "Twitter", href: "#" },
-  { text: "YouTube", href: "#" },
-  { text: "GitHub", href: "#" },
-  { text: "SoundCloud", href: "#" },
-  { text: "LinkedIn", href: "#" },
-];
+{
+        href: "https://www.linkedin.com/company/yrx",
+        text: "LinkedIn",
+        external: true,
+      },
+      {
+        href: "https://x.com/YRXmarketing",
+        text: "Twitter/X",
+        external: true,
+      },
+    ];
 ---
 
 <style>
@@ -46,7 +52,7 @@ const socialLinks = [
 </style>
 <footer
   x-data="{ year: new Date().getFullYear() }"
-  class="bg-black text-white relative lg:h-svh flex flex-col w-full h-full justify-between"
+  class="bg-black text-white relative lg:h-svh flex flex-col w-full h-full justify-between mt-24" 
 >
   <Wrapper
     class="flex flex-col md:flex-row justify-between w-full gap-4 pb-24 pt-8"
