--- a/src/layouts/DirectoryLayout.astro
+++ b/src/layouts/DirectoryLayout.astro
@@ -150,6 +150,9 @@ type Thread = {
     <Wrapper variant="standard">
       <div class="py-12">
         <div class="max-w-4xl">
+          <h1 class="text-4xl md:text-4xl lg:text-5xl xl:text-6xl font-bold text-base-900 mb-6">
+            Drive traffic to {frontmatter.title} from Reddit
+          </h1>
             <Text tag="p" variant="textBase" class="text-base-500">
               {frontmatter.description}
             </Text>
@@ -159,7 +162,7 @@ type Thread = {
             <div class="flex items-center gap-3 mb-6">
               <img src="/images/directory/yxr-reddit.png" alt="Reddit icon" width="24" height="24" />
               <h2 class="text-2xl font-bold text-base-900">
-                Reddit Threads
+                Ranking Threads
               </h2>
             </div>
             <div class="flex flex-col gap-6">
