--- a/src/components/fundations/scripts/AlpineJS.astro
+++ b/src/components/fundations/scripts/AlpineJS.astro
@@ -1,2 +1,3 @@
-<!--- Alpine JS CDN -->
+<!--- Alpine JS CDN with Focus Plugin -->
+<script defer src="https://unpkg.com/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
