--- a/src/components/infopages/FaqDirectory.astro
+++ b/src/components/infopages/FaqDirectory.astro
@@ -36,7 +36,7 @@ const faqSchema = {
             <Text tag="h3" variant="textLG" class="text-base-900 font-medium">
             {faq.question}
             </Text>
-            <Text tag="p" variant="textSM" class="text-base-500 mt-2 text-balance">
+            <Text tag="h4" variant="textSM" class="text-base-500 mt-2 text-balance">
             {faq.answer}
             </Text>
         </div>
