--- a/src/layouts/DirectoryLayout.astro
+++ b/src/layouts/DirectoryLayout.astro
@@ -162,7 +162,7 @@ const seoCanonical = `https://yrx.io/directory/${frontmatter.slug || ''}`;
       <div class="py-12">
         <div class="max-w-4xl">
           <h1 class="text-4xl md:text-4xl lg:text-5xl xl:text-6xl font-bold text-base-900 mb-6">
-            Drive Traffic to {frontmatter.title} from Reddit
+            How to Drive Traffic to {frontmatter.title} from Reddit
           </h1>
             <Text tag="p" variant="textBase" class="text-base-500">
               {frontmatter.description}
